# SMD

./: .gitignore  ALL_IN_ONE_PACKAGING.md  DEMO-GUI-V2.py  DISTRIBUTION_GUIDE.md  NOTICE  PRE_PUBLISH.md  README.md  Run-SMD.bat  TEST_PLAN.md  add_gps.py  build_smd.ps1  desktop_gui_pyqt.py  desktop_gui_pyqt.spec  main.py  pyproject.toml  requirements.txt  smd.spec  smd_installer.iss
.cursor/rules/: agent-docs.mdc
agent-docs/: ALL_IN_ONE_PACKAGING.md  ARCHITECTURE.md  DECISIONS.md  DISTRIBUTION_GUIDE.md  PRE_PUBLISH.md
gui/: __init__.py  common.py  dialogs.py  single_instance.py  widgets.py  window_chrome.py  workers.py
gui/tabs/: __init__.py  completion.py  file_checker_tab.py  guide_tab.py  help_about_tabs.py  (+1 more)
scripts/: add_keys_xmp_location.ps1  fetch_ffmpeg.ps1  reembed_xmp_gps.ps1
smd/: about_content.py  account_layout.py  core.py  duplicates.py  export_detect.py  ffmpeg_bundle.py  fsutil.py  gpu_encode.py  grip_splitter.py  guide_content.py  help_content.py  local_pipeline.py  map_gps.py  media_integrity.py  media_types.py  metadata.py  models.py  overlays.py  procutil.py  runtime.py  session_report.py  staging_check.py  support_links.py  system_profile.py  theme.py  time_estimate.py  timeutil.py  updater.py  utils.py  video_repair.py
tests/: README.md  test_account_layout.py  test_display_path.py  test_export_detect.py  test_fsutil.py  test_full_pipeline_integration.py  test_hardlink_outputs.py  test_map_gps.py  test_match_map.py  test_media_types.py  test_metadata_gps.py  test_output_names.py  test_session_report.py  test_staging_check.py
(+5 files in other folders)
