[project]
name = "smd"
version = "1.0.0"
description = "Snapchat Memories Downloader (SMD) - offline bundled export processor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exif>=1.6.1",
    "pydantic>=2.12.0",
    "folium>=0.15.0",
    "pillow>=10.0.0",
    "PyQtWebEngine>=5.15.0",
    "PyQt5>=5.15.0",
    "mutagen>=1.47.0",
    "pytz",
    "timezonefinder",
    "packaging",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
